# Tubes3_IngfoLoker

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
database/: init.sql
src/: app.py  bm.py  kmp.py  main.py
src/GUI/: main_window.py
src/GUI/components/: pagination.py  pdf_viewer.py  result_card.py  results_area.py  search_bar.py  summary_dialog.py
src/GUI/resources/: style.qss
src/algo/: ahocorasick.py  bm.py  kmp.py  levenshtein.py
src/controller/: main_controller.py
src/crypto/: AES.py  FF3.py
src/db/: connection.py  encryption.py  manager.py  models.py
src/gui/: app.py  appState.py
src/utils/: data.py  regex.py  seeder.py  setup.py
test/: bm_test.py  kmp_test.py  levenshtein_test.py  test.py
test/db/: connection.py
