[project]
name = "tubes3-ingfoloker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faker>=37.3.0",
    "pymupdf>=1.26.1",
    "pymysql>=1.1.1",
    "pyqt6>=6.9.1",
    "pyqt6-webengine>=6.9.0",
    "python-dotenv>=1.1.0",
]
